SERVER-32372 Ensure per-shard write request size doesn't exceed the max allowed BSON size