src/mongo/s/write_ops/batch_write_op.h
@@ -202,6 +202,9 @@ private:
     // The incoming client request
     const BatchedCommandRequest& _clientRequest;
 
+    // Cached transaction number (if one is present on the operation contex)
+    boost::optional<TxnNumber> _batchTxnNum;
+
     // Array of ops being processed from the client request
     std::vector<WriteOp> _writeOps;
 
@@ -240,15 +243,15 @@ public:
         return _endpoint;
     }
 
+    const std::vector<TargetedWrite*>& getWrites() const {
+        return _writes.vector();
+    }
+
     /**
      * TargetedWrite is owned here once given to the TargetedWriteBatch
      */
     void addWrite(TargetedWrite* targetedWrite) {
         _writes.mutableVector().push_back(targetedWrite);
-    }
-
-    const std::vector<TargetedWrite*>& getWrites() const {
-        return _writes.vector();
     }
 
 private:
